--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-23 15:08+0000\n"
+"POT-Creation-Date: 2021-02-23 21:42+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -4826,6 +4826,11 @@ msgstr ""
 msgid "Two-factor authentication backup tokens changed."
 msgstr "Código de pedido inválido, por favor, verifique e inténtelo nuevamente."
 
+#, fuzzy
+#| msgid "Password"
+msgid "Confirm Password"
+msgstr "Contraseña"
+
 msgid "The import file"
 msgstr "El archivo de importación"
 
@@ -9415,9 +9420,9 @@ msgid ""
 msgstr ""
 
 #, fuzzy
-#| msgid "Flow Message"
-msgid "Welcome Back"
-msgstr "Mensaje del flujo"
+#| msgid "Password"
+msgid "Confirm Access"
+msgstr "Contraseña"
 
 msgid ""
 "\n"
@@ -9425,6 +9430,16 @@ msgid ""
 "\n"
 "  "
 msgstr ""
+
+#, fuzzy
+#| msgid "Config"
+msgid "Confirm"
+msgstr "Configuración"
+
+#, fuzzy
+#| msgid "Flow Message"
+msgid "Welcome Back"
+msgstr "Mensaje del flujo"
 
 #, fuzzy
 #| msgid "Sign in"
@@ -10010,6 +10025,9 @@ msgstr ""
 #, fuzzy, python-format
 msgid "Complementary credits, thanks for trying %(brand)s."
 msgstr "Créditos complementarios, gracias por usar TextIt."
+
+msgid "To access this page please confirm your current password."
+msgstr ""
 
 #, fuzzy, python-format
 #| msgid ""
@@ -11057,9 +11075,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "Organization using this channel"
 #~ msgstr "La organización que usa este transmisor"
-
-#~ msgid "Config"
-#~ msgstr "Configuración"
 
 #~ msgid "Any channel specific configuration, used for the various aggregators"
 #~ msgstr "Cualquier configuración específica al transmisor, usada para los diferentes agregadores"
