Make confirm access view a subclass of smartmin login view

--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-23 21:42+0000\n"
+"POT-Creation-Date: 2021-02-24 15:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3253,6 +3253,9 @@ msgstr ""
 msgid "Invalid backup token. Please try again."
 msgstr ""
 
+msgid "Password incorrect."
+msgstr ""
+
 #, python-brace-format
 msgid "Deleted user {username}"
 msgstr ""
@@ -3299,9 +3302,6 @@ msgstr ""
 msgid "OTP incorrect. Please try again."
 msgstr ""
 
-msgid "Password incorrect."
-msgstr ""
-
 msgid "Two-factor authentication enabled"
 msgstr ""
 
@@ -3324,9 +3324,6 @@ msgid "Two-factor Authentication"
 msgstr ""
 
 msgid "Two-factor authentication backup tokens changed."
-msgstr ""
-
-msgid "Confirm Password"
 msgstr ""
 
 msgid "The import file"
@@ -6330,17 +6327,16 @@ msgstr ""
 msgid "Confirm Access"
 msgstr ""
 
-msgid ""
-"\n"
-"    Please sign in with your email address and password.\n"
-"\n"
-"  "
+msgid "To access this page please confirm your current password."
 msgstr ""
 
 msgid "Confirm"
 msgstr ""
 
 msgid "Welcome Back"
+msgstr ""
+
+msgid "Please sign in with your email address and password."
 msgstr ""
 
 msgid "Sign In"
@@ -6748,9 +6744,6 @@ msgstr ""
 
 #, python-format
 msgid "Complementary credits, thanks for trying %(brand)s."
-msgstr ""
-
-msgid "To access this page please confirm your current password."
 msgstr ""
 
 #, python-format
