--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-24 16:32+0000\n"
+"POT-Creation-Date: 2021-02-24 17:35+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -1132,7 +1132,7 @@ msgstr ""
 #| "Add a <a href=\"http://facebook.com\">Facebook</a> bot to send and receive messages on behalf\n"
 #| "    of one of your Facebook pages for free. You will need to create a Facebook application on their\n"
 #| "    <a href=\"http://developers.facebook.com\">developers</a> site first."
-msgid "Add a %(link)s bot to send and receive messages on behalf of one of your Facebook pages for free. You will need to connect your page by logging into your Facebook and checking the Facebook page to connect. On the Facebook page, navigate Settings > Page roles and verify you have an admin page role on the page. You are required to be having an admin page role on the page."
+msgid "Add a %(link)s bot to send and receive messages on behalf of one of your Facebook pages for free. You will need to connect your page by logging into your Facebook and checking the Facebook page to connect. On the Facebook page, navigate Settings > Page roles and verify you have an admin page role on the page."
 msgstr ""
 "Добавьте бота <a href=\"http://facebook.com\">Facebook</a> для бесплатной отправки и получения сообщений от имени \n"
 "    одной из Ваших страниц на Facebook. Вам сначала потребуется создать приложение Facebook на их \n"
