--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-24 17:35+0000\n"
+"POT-Creation-Date: 2021-02-24 18:38+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -5264,11 +5264,13 @@ msgstr "Работает в любой стране и использует та
 msgid "API Channels"
 msgstr "Каналы API"
 
-msgid "More"
-msgstr "Больше"
+#, fuzzy
+#| msgid "API Channels"
+msgid "All Channels"
+msgstr "Каналы API"
 
 #, python-format
-msgid "The channels above are those supported in your region. Click <a class=\"inline\" href=\"%(claim_all_url)s\"> here</a> to see all possible channel types."
+msgid "The channels above are the available channels for your region, but you can also <a class=\"inline\" href=\"%(claim_all_url)s\">view all channels</a>."
 msgstr ""
 
 msgid "Enter your credentials to add your number."
@@ -10097,6 +10099,9 @@ msgstr ""
 "      Это необязательно, но лучше смотреть видеоролики по порядку, так как они отталкиваются друг от друга в порядке очередности.\n"
 "\n"
 "    "
+
+msgid "More"
+msgstr "Больше"
 
 #, python-format
 msgid ""
