Change synched to synced

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-24 18:38+0000\n"
+"POT-Creation-Date: 2021-02-24 22:07+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -3246,7 +3246,7 @@ msgstr "Sincronizado el"
 
 #, fuzzy
 #| msgid "Your flow has been removed."
-msgid "Your classifier has been synched."
+msgid "Your classifier has been synced."
 msgstr "Su flujo ha sido retirado."
 
 #, fuzzy
