--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-24 18:38+0000\n"
+"POT-Creation-Date: 2021-02-24 22:07+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -2064,7 +2064,9 @@ msgstr "Journal"
 msgid "Sync"
 msgstr "Synchroniser"
 
-msgid "Your classifier has been synched."
+#, fuzzy
+#| msgid "Your classifier has been synched."
+msgid "Your classifier has been synced."
 msgstr "Votre classificateur a été synchronisé."
 
 msgid "Unable to sync classifier. See the log for details."
