--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-24 18:38+0000\n"
+"POT-Creation-Date: 2021-02-24 22:07+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -2969,7 +2969,7 @@ msgid "Sync"
 msgstr "Sincronizado em"
 
 #, fuzzy
-msgid "Your classifier has been synched."
+msgid "Your classifier has been synced."
 msgstr "Seu número de telefone agora está conectado"
 
 #, fuzzy
